prover-ray/zkcdriver/testdata/synced/invalid/memory_03.zkc
//error:6:7-8:unknown symbol
pub output res(address:u16) -> (word:u16)

fn test() {
  // write output
  res[x] = 42
  // done
  return
}
